fix pattern transition glitch - now each transition calculates its rotation amount and adds it to the total, instead of whateer was happening before

--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
           </div>
           <div class="button patternMode" onclick="addTransition()">next</div>
           <div id="shortRotations" class="button patternMode" onclick="updateSetting(this.id, !this.value)">short spin</div>
-          <div id="rotX" class="button patternMode" onclick="updateSetting(this.id, !this.value)">rot x</div>
-          <div id="rotY" class="button patternMode" onclick="updateSetting(this.id, !this.value)">rot y</div>
+          <div id="rotX" class="button patternMode" onclick="updateSetting(this.id, !this.value)">flip x</div>
+          <div id="rotY" class="button patternMode" onclick="updateSetting(this.id, !this.value)">flip y</div>
 
           <div class="slider left orbitMode fourdig">
             <label for="bodies"><div>tiles</div><span></span></label>
@@ -130,8 +130,7 @@
       </div>
       <div id="msg">
         <div id="msgHeader" class="controlHeader">tile stee</div>
-        <div id="message" class="controlPanel">
-        </div>
+        <div id="message" class="controlPanel"></div>
       </div>
     </div>
 
