--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
             <label for="tileScale"><div>tile scale</div><span></span></label>
             <input type="range" id="tileScale" min=".7" max="2.8" step=".02" oninput="updateSetting(this.id, this.value)" />
           </div>
-          <div class="button patternMode" onclick="addTransition('ltr')">ltr</div>
-          <div class="button patternMode" onclick="addTransition('rtl')">rtl</div>
-          <div class="button patternMode" onclick="addTransition('cascade up')">btt</div>
-          <div class="button patternMode" onclick="addTransition('cascade down')">ttb</div>
+          <div class="button patternMode trans" onclick="addTransition('rtl')">&lt;</div>
+          <div class="button patternMode trans" onclick="addTransition('ltr')">&gt;</div>
+          <div class="button patternMode trans" onclick="addTransition('cascade up')">^</div>
+          <div class="button patternMode trans" onclick="addTransition('cascade down')">v</div>
           <div class="slider right spinMode">
             <label for="spinYSpeed"><div>flip y</div><span></span></label>
             <input type="range" id="spinYSpeed" min="0" max="99" step="1" oninput="updateSetting(this.id, this.value)" />
@@ -90,9 +90,10 @@
             <label for="animationLength"><div>spread</div><span></span></label>
             <input type="range" id="animationLength" min=".01" max=".5" step=".01" oninput="updateSetting(this.id, this.value)" />
           </div>
-          <div class="button patternMode" onclick="addTransition('diagonal rtl')">d-rtl</div>
-          <div class="button patternMode" onclick="addTransition('diagonal skew')">d-ltr</div>
-          <div class="button patternMode" onclick="addTransition('center-circle')">circle</div>
+          <div class="button patternMode trans" onclick="addTransition('diagonal rtl')">&lt;\</div>
+          <div class="button patternMode trans" onclick="addTransition('diagonal skew')">/&gt;</div>
+          <div class="button patternMode trans" onclick="addTransition('center-circle')">O</div>
+          <div class="button patternMode trans" onclick="addTransition('scroll')">\\</div>
 
           <div class="slider left orbitMode fourdig">
             <label for="bodies"><div>tiles</div><span></span></label>
